# skills_mcps

./: .gitattributes  .gitignore  AGENTS.md  README.md  REFLEX_CLAUDE_SKILLS.md  SETUP-COMPLETE.md  demo.db
claude-code/: Claude Code CLI Guide.md  README.md  dangerous-mode-setup.md  mcp-setup-guide.md  multi-agents-guide.md  skills-guide.md  subagents-guide.md
claude-code/templates/: mcp.json  settings.json
claude-skills/: CLAUDE.md  EXAMPLES.md  README.md
claude-skills/baileys-whatsapp-bot/: SKILL.md
claude-skills/blpapi-python/: SKILL.md
claude-skills/caddy-windows/: README.md  SKILL.md
claude-skills/data-pipeline-patterns/: SKILL.md
claude-skills/dynamics_dataverse_api/: README.md  SKILL.md  __init__.py  auth.py  batch.py  client.py  requirements.txt
claude-skills/examples/: README.md
claude-skills/fastapi/: SKILL.md  quick-start.md
claude-skills/fastapi-agent-skills/: README.md
claude-skills/googleapis-typescript/: SKILL.md  package.json  tsconfig.json
claude-skills/windows-share-drive/: .env.example  README.md  pyproject.toml  requirements.txt
claude-skills/windows-share-drive/examples/: example_save_and_read.py
claude-skills/windows-share-drive/skill/: __init__.py  config.py  smb_client.py
claude-skills/windows-share-drive/tests/: test_basic.py
codex-skills/: ChatGPT Codex CLI — Comprehensive Practical Guide (2026).md  README.md
cursor-rules/: README.md
gemini/: Gemini CLI — Comprehensive Practical Guide (2026).md  README.md  mcp-setup-guide.md  multi-agents-guide.md  skills-guide.md
mcp-configs/: QUICK-SETUP.md  README.md
(+308 files in other folders)
